Fixed alignment in navbar

--- a/css/new_site.css
+++ b/css/new_site.css
@@ -37,7 +37,9 @@ img {
 
 .nav-item {
   font-weight: bold;
-  margin-left: 15px;
+  margin-left: 7.5px;
+  margin-right: 7.5px;
+  text-align: center;
 }
 
 .nav-item:last-child .nav-link {
